Composer tiers cleanup

--- a/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.scss
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.scss
@@ -5,7 +5,19 @@ m-composer__monetizeV2__custom {
     }
   }
 
-  .m-composerPopup__checkbox--allowTokens {
-    margin-left: 20px;
+  .m-form__field--text {
+    margin-right: 20px;
+    > input {
+      box-shadow: none !important;
+    }
+  }
+
+  .m-formInputCheckbox__customLabel {
+    > span {
+      font-size: 15px !important;
+      @include m-theme() {
+        color: themed($m-textColor--primary);
+      }
+    }
   }
 }
