--- a/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.html
@@ -99,7 +99,7 @@
               </div>
               <input
                 type="radio"
-                value="null"
+                value="none"
                 name="urn"
                 id="'tier-none'"
                 formControlName="urn"
