--- a/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.scss
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/memberships/memberships.component.scss
@@ -1,4 +1,8 @@
 m-composer__monetizeV2__memberships {
+  .m-composerPopup__content.m-formWrapper {
+    max-height: 40vh;
+    overflow-y: scroll;
+  }
   .m-form__row--label {
     display: flex;
     justify-content: space-between;
