--- a/src/app/modules/blogs/v2/edit/editor-base.component.html
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.html
@@ -41,14 +41,14 @@
             #bannerUpload
           />
         </span>
-        <span
+        <!-- <span
           class="m-blogEditor__bannerSizeText"
           i18n="@@BLOGS_EDITOR__RECOMMENDED_BANNER_SIZE_INFO"
         >
           <em>
             Recommended minimum size 200px x 1125 (Ratio 16:9)
           </em>
-        </span>
+        </span> -->
       </div>
       <div class="m-blogEditor__ellipsis" *ngIf="!(service.banner$ | async)">
         <ng-template
