--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
     [hidden]="!canEditMetadata"
     [disabled]="!!(attachment$ | async) || (isPosting$ | async)"
     (onSelect)="onAttachmentSelect($event)"
-    accept="image/*,video/*"
+    accept="image/*,video/*,video/mp4,video/x-m4v"
     data-cy="upload-button"
     #fileUploadComponent
   >
