Plus posts must have 1+ hashtag

--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -21,11 +21,9 @@
         (ngModelChange)="onTermsChange($event)"
       >
         <span i18n="@@COMPOSER__PLUS__TERMS__CHECKBOX"
-          >Post to Minds+ and agree to the
-          <a routerLink="/p/terms" target="_blank">
-            terms
-          </a></span
-        >
+          >I agree to the <a routerLink="/p/terms" target="_blank">Terms</a>
+          and have the rights to monetize this content.
+        </span>
       </m-formInput__checkbox>
     </div>
     <div class="m-form__field--textboxToggle">
