--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
@@ -70,7 +70,7 @@
               see this post
             </ng-container>
             <ng-container i18n="@@WIRE__SUPPORT__TIER__TEXT" *ngIf="isPlus">
-              Join Plus to see this post
+              Only Minds+ users can see this post
             </ng-container>
           </ng-template>
         </ng-container>
