--- a/src/app/modules/language/language-bar.component.scss
+++ b/src/app/modules/language/language-bar.component.scss
@@ -1,11 +1,6 @@
 .m-languageBar__wrapper {
   display: flex;
 
-  @media screen and (max-width: $m-grid-max-mobile) {
-    flex-direction: column;
-    align-items: center;
-  }
-
   .m-languageBar__currentLanguage {
     display: flex;
     justify-content: center;
@@ -21,15 +16,13 @@
     }
   }
   .m-languageBar__languageOptions {
-    display: flex;
-    align-self: normal;
     text-align: left;
     white-space: nowrap;
     overflow: hidden;
     position: relative;
 
     @media screen and (max-width: $m-grid-max-mobile) {
-      margin: 20px 0;
+      display: none;
     }
 
     &::after {
