--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -18,7 +18,7 @@ m-wire--lock-screen.m-wire--lock-screen-2020 {
     z-index: 0;
     cursor: pointer;
     @include m-theme() {
-      color: themed($m-white);
+      color: themed($m-white-always);
     }
 
     > * {
