--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -67,6 +67,7 @@ m-wire--lock-screen.m-wire--lock-screen-2020 {
 
   .m-wireLockScreen__message {
     margin: 20px auto;
+    min-height: 20px;
     text-align: center;
     max-width: 60%;
     font-weight: 400;
