Refactored css, fixed issue with tables and lists. also captcha button.

--- a/src/app/modules/captcha/captcha-modal/captcha-modal.component.scss
+++ b/src/app/modules/captcha/captcha-modal/captcha-modal.component.scss
@@ -26,7 +26,7 @@
         @include m-theme() {
           background-color: themed($m-btn--primary);
           border: 1px solid themed($m-borderColor--primary);
-          color: themed($m-textColor--primary);
+          color: themed($m-white-always);
         }
       }
     }
