--- a/src/app/modules/blogs/v2/edit/editor-base.component.scss
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.scss
@@ -6,7 +6,7 @@
 
   .m-blogEditor__bannerImageContainer {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
+    padding-bottom: 56.25%; /* 16:9 */
     overflow: hidden;
 
     img {
