Fixed tables and removed unneeded interface template.

--- a/src/app/modules/blogs/blog.scss
+++ b/src/app/modules/blogs/blog.scss
@@ -301,14 +301,13 @@ minds-blog-edit {
   }
 
   figure.table {
-    margin: 0;
+    margin: 40px 0;
+    overflow-x: auto;
+    max-width: 100%;
 
     table {
-      display: flex;
-      flex-direction: column;
       align-items: center;
       border-spacing: 0;
-      overflow-x: auto;
 
       tbody {
         max-width: 100%;
@@ -316,6 +315,7 @@ minds-blog-edit {
 
       td,
       th {
+        min-width: 100px; /* Stop shrinking and trigger scrollbar */
         padding: 8px 16px;
         text-align: left;
         @include m-theme() {
