--- a/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
@@ -53,6 +53,15 @@
                 >Allow tokens</span
               >
             </m-formInput__checkbox>
+            <m-tooltip>
+              <span m-tooltip--anchor>𝒊</span>
+              <ng-container
+                i18n="@@COMPOSER__MONETIZE_CUSTOM__ALLOW_TOKENS_TOOLTIP"
+              >
+                Allow users to purchase your membership with Minds Tokens. Token
+                amounts are converted at a rate of $1.25/token.
+              </ng-container>
+            </m-tooltip>
           </div>
         </div>
       </div>
