Replace 'wire' with 'pay'

--- a/src/app/modules/marketing/features.component.html
+++ b/src/app/modules/marketing/features.component.html
@@ -72,7 +72,7 @@
     <div
       class="m-marketing--section--subsection-left m-marketing--section--subsection-text"
     >
-      <h5>Wire</h5>
+      <h5>Pay</h5>
       <h2>Exchange tokens with other channels</h2>
       <p>
         Send tokens to other channels as a tip or in exchange for content
