--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -83,7 +83,7 @@
         </div>
         <p>
           iPhone users may download the mobile app directly from the iOS App
-          Store. All features of the Minds Token (wallet, boost, wire, etc) are
+          Store. All features of the Minds Token (wallet, boost, pay, etc) are
           not currently supported in this version. All content is accessible.
         </p>
       </div>
