--- a/src/app/modules/pro/channel/channel.component.html
+++ b/src/app/modules/pro/channel/channel.component.html
@@ -78,7 +78,7 @@
             class="m-proChannelTopbar__navItem"
             (click)="wire()"
             i18n="@@COMMON__WIRE"
-            >Wire</a
+            >Pay</a
           >
 
           <m-pro__subscribeButton></m-pro__subscribeButton>
