--- a/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
+++ b/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
@@ -85,7 +85,7 @@
 
     <li *ngIf="currentUser?.guid != channel?.guid">
       <a (click)="wire(); closeMenu()">
-        Wire
+        Pay
       </a>
     </li>
 
