--- a/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
+++ b/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
@@ -51,7 +51,7 @@
       <div class="m-form__row--input">
         <label for="wire-received" class="m-form__customInputWrapper__checkbox">
           <ng-container i18n="@@EMAIL_NOTIFICATIONS__RECEIVED_WIRE"
-            >I receive a wire</ng-container
+            >I receive a payment</ng-container
           >
           <input
             type="checkbox"
