--- a/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
+++ b/src/app/modules/settings-v2/other/subscription-tiers/subscription-tiers.component.html
@@ -10,7 +10,7 @@
     i18n="@@SETTINGS__OTHER__PAIDCONTENT__SUBSCRIPTIONS__DESCRIPTION"
   >
     Define incentives for users to support your channel. These tiers will be
-    displayed on your channel's sidebar and wire screen.
+    displayed on your channel's sidebar and shop page.
   </div>
 </m-settingsV2__header>
 
