--- a/src/app/modules/settings/emails/emails.component.html
+++ b/src/app/modules/settings/emails/emails.component.html
@@ -85,7 +85,7 @@
 
       <label for="wire-received">
         <ng-container i18n="@@MINDS__SETTINGS__WIRE_RECEIVED_LABEL">
-          I receive a wire
+          I receive a payment
         </ng-container>
       </label>
     </li>
