--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -28,7 +28,7 @@
           routerLinkActive="m-page--sidebar--navigation--item-active"
         >
           <i class="ion-icon ion-flash"></i>
-          <span i18n="@@SETTINGS__NAVIGATION__GENERAL_NAV">Wire</span>
+          <span i18n="@@SETTINGS__NAVIGATION__GENERAL_NAV">Pay</span>
         </a>
 
         <a
