--- a/src/app/modules/settings/tiers/tiers.component.html
+++ b/src/app/modules/settings/tiers/tiers.component.html
@@ -28,8 +28,8 @@
   <h4>Subscription Tiers</h4>
 
   <p>
-    Create tiers below to incentivise supporters to wire you. These tiers will
-    be displayed on the sidebar of your channel page on in the wire screen.
+    Create tiers below to incentivise supporters to pay you. These tiers will be
+    displayed on the shop section of the sidebar of your channel page.
   </p>
 
   <m-wire__subscriptionTiers
