--- a/src/app/modules/wallet/tokens/101/101.component.html
+++ b/src/app/modules/wallet/tokens/101/101.component.html
@@ -77,8 +77,8 @@
     <p>
       OffChain tokens are stored on Minds servers, and they can be used the same
       way that you used your Points. There are no fees, and they can be used to
-      Boost content for more views from the network or to Wire other creators
-      who you support.
+      Boost content for more views from the network or to pay other creators who
+      you support.
     </p>
     <p>
       You now have the ability to withdraw these tokens into your OnChain
