--- a/src/app/modules/wallet/tokens/onboarding/completed/completed.component.html
+++ b/src/app/modules/wallet/tokens/onboarding/completed/completed.component.html
@@ -17,7 +17,7 @@
       <a class="m-btn m-btn--slim" routerLink="/wallet/tokens/101"
         >More on Rewards</a
       >
-      <a class="m-btn m-btn--slim" routerLink="/wire">Learn Wire</a>
+      <a class="m-btn m-btn--slim" routerLink="/wire">Learn Pay</a>
       <a class="m-btn m-btn--slim" routerLink="/boost">Learn Boost</a>
     </div>
   </div>
