--- a/src/app/modules/wallet/tokens/onboarding/onchain/onchain.component.html
+++ b/src/app/modules/wallet/tokens/onboarding/onchain/onchain.component.html
@@ -5,7 +5,7 @@
     </h2>
 
     <p class="m-token--onboarding--subtext">
-      To receive OnChain payments from other channels (eg, from a Wire or a
+      To receive OnChain payments from other channels (eg, from a payment or a
       Boost), you will need to let us know which address to direct these tokens
       to.
     </p>
