--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.html
@@ -267,7 +267,7 @@
     class="m-walletSecondaryText--desc"
     i18n="@@SETTINGS_TOKENS__TO_RECEIVE_INFO"
   >
-    To receive on-chain payments from other channels (e.g. from a Wire or a
+    To receive on-chain payments from other channels (e.g. from a payment or a
     Boost), you will need an on-chain address. You can change it here at any
     time. Note: your on-chain address is the same as your Ether address.
     <m-tooltip icon="help">
