--- a/src/app/modules/wallet/wallet.component.html
+++ b/src/app/modules/wallet/wallet.component.html
@@ -21,12 +21,12 @@
         routerLink="/wallet/wire"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span>Wire</span>
+        <span>Pay</span>
         <m-tooltip
           icon="help"
           i18n="@@WALLET_V2__WALLET__YOU_SEND_RECEIVED_WIRES_LEDGER"
         >
-          Your sent and received wires ledger
+          Your sent and received payments ledger
         </m-tooltip>
       </a>
 
