--- a/src/app/modules/wire/channel/channel.component.html
+++ b/src/app/modules/wire/channel/channel.component.html
@@ -6,7 +6,7 @@
     <i class="ion-icon ion-flash"></i>
 
     <span class="m-wire-channel--cta-label">
-      <span i18n="@@WIRE__CHANNEL__WIRE_ME_ACTION">Wire me</span>
+      <span i18n="@@WIRE__CHANNEL__WIRE_ME_ACTION">Pay me</span>
     </span>
   </button>
 </div>
