--- a/src/app/modules/wire/channel/overview/overview.component.html
+++ b/src/app/modules/wire/channel/overview/overview.component.html
@@ -9,8 +9,8 @@
         icon="help"
         i18n="@@WIRE__CHANNEL__OVERVIEW__WIRES_CARD_TOOLTIP"
       >
-        How many wires <span>@</span>{{ channel.username }} has received in the
-        last 30 days
+        How many payments <span>@</span>{{ channel.username }} has received in
+        the last 30 days
       </m-tooltip>
     </div>
   </div>
@@ -26,7 +26,7 @@
         i18n="@@WIRE__CHANNEL__OVERVIEW__POINTS_CARD_TOOLTIP"
       >
         This is <span>@</span>{{ channel.username }}'s total volume (gross) of
-        all Token wires received in the last 30 days
+        all Token payments received in the last 30 days
       </m-tooltip>
     </div>
   </div>
@@ -55,7 +55,7 @@
         icon="help"
         i18n="@@WIRE__CHANNEL__OVERVIEW__BREAKDOWN_LINK_TOOLTIP"
       >
-        See a breakdown of all your Wires in your wallet
+        See a breakdown of all the payments in your wallet
       </m-tooltip>
     </div>
   </div>
@@ -73,7 +73,7 @@
         icon="help"
         i18n="@@WIRE__CHANNEL__OVERVIEW__YOU_SENT_CARD_TOOLTIP"
       >
-        This is the amount you have wired to {{ channel.name }} in the last 30
+        This is the amount you have paid to {{ channel.name }} in the last 30
         days
       </m-tooltip>
     </div>
