--- a/src/app/modules/wire/console/console.component.html
+++ b/src/app/modules/wire/console/console.component.html
@@ -14,7 +14,7 @@
     <div class="m-wire-console">
       <div class="m-wire-console--hero">
         <div class="m-wire-console--hero-header">
-          <h2 i18n="@@M__FEATURE__WIRE">Wire</h2>
+          <h2 i18n="@@M__FEATURE__WIRE">Pay</h2>
           <div class="m-wire-console--options-toggle">
             <button
               class="mdl-button mdl-button--primary mdl-color--white mdl-color-text--blue"
@@ -28,8 +28,8 @@
         </div>
 
         <p i18n="@@WIRE__CONSOLE__WIRE_DESC">
-          Wire allows you to receive money for rewards and exclusive content.
-          You can configure your rewards on your channel page.
+          Minds Pay allows you to receive money for rewards and exclusive
+          content. You can configure your rewards on your channel page.
         </p>
 
         <m-wire-console--overview></m-wire-console--overview>
