--- a/src/app/modules/wire/console/ledger.component.html
+++ b/src/app/modules/wire/console/ledger.component.html
@@ -179,7 +179,7 @@
               style="text-align:center"
               i18n="@@WIRE__CONSOLE__LEDGER__NO_WIRES_NOTICE"
             >
-              No Wires to show.
+              No payments to show.
             </td>
           </tr>
         </tbody>
