--- a/src/app/modules/wire/console/overview/overview.component.html
+++ b/src/app/modules/wire/console/overview/overview.component.html
@@ -3,12 +3,12 @@
     <div class="m-wire-console--overview-count m-wire-console--overview-stat">
       <span>{{ stats.count | number: '1.0-0' }}</span>
       <div class="m-wire-console--label">
-        <label i18n="@@M__FEATURE__WIRE_PLURAL">Wires</label>
+        <label i18n="@@M__FEATURE__WIRE_PLURAL">Payments</label>
         <m-tooltip
           icon="help"
           i18n="@@WIRE__CONSOLE__OVERVIEW__MONEY_WIRES_TOOLTIP"
         >
-          The total wires you have received
+          The total payments you have received
         </m-tooltip>
       </div>
     </div>
