--- a/src/app/modules/wire/creator/payments/payments.creator.component.html
+++ b/src/app/modules/wire/creator/payments/payments.creator.component.html
@@ -157,7 +157,7 @@
 
       <div *ngIf="!inProgress && success" class="m-wire--creator--submit-label">
         <i class="material-icons">check</i>
-        <span i18n="@@WIRE__CREATOR__WIRED_NOTICE">Wired!</span>
+        <span i18n="@@WIRE__CREATOR__WIRED_NOTICE">Paid!</span>
       </div>
 
       <div *ngIf="!inProgress && !!error" class="m-wire--creator--submit-error">
