--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.html
@@ -131,7 +131,7 @@
 
         <ng-template #notHasIntro>
           <ng-container i18n="@@WIRE__LOCK_SCREEN__WIRE_ME_OVER_PART"
-            >Wire me over</ng-container
+            >Pay me over</ng-container
           >
 
           <ng-container
@@ -164,7 +164,7 @@
       </p>
       <p *ngIf="isOwner()">
         <ng-container i18n="@@WIRE__LOCK_SCREEN__ONLY_SUPPORTERS_TITLE_PART"
-          >Only supporters who wire you over</ng-container
+          >Only supporters who pay you over</ng-container
         >
 
         <ng-container
@@ -248,7 +248,7 @@
 
     <h5 class="m-wire--lock-screen--message">
       <ng-container i18n="@@WIRE__LOCK_SCREEN__CAN_ONLY_BE_SEEN_TITLE_PART"
-        >This post can only be seen by supporters who wire</ng-container
+        >This post can only be seen by supporters who pay</ng-container
       >
 
       <ng-container
