--- a/src/app/modules/wire/threshold-input/threshold-input.component.html
+++ b/src/app/modules/wire/threshold-input/threshold-input.component.html
@@ -19,7 +19,7 @@
       <m-tooltip>
         <i *ngIf="!enabled" m-tooltip--anchor class="material-icons">people</i>
         <i *ngIf="enabled" m-tooltip--anchor class="material-icons">lock</i>
-        <ng-container i18n="@@M__FEATURE__WIRE">Wire</ng-container>
+        <ng-container i18n="@@M__FEATURE__WIRE">Pay</ng-container>
       </m-tooltip>
 
       <ng-container *ngIf="labelPosition === 'right'">
