--- a/src/app/modules/wallet/tokens/addresses/addresses.component.html
+++ b/src/app/modules/wallet/tokens/addresses/addresses.component.html
@@ -2,7 +2,7 @@
   <h2>Addresses</h2>
 
   <p class="m-card--subtext">
-    To receive OnChain payments from other channels (eg, from a Wire or a
+    To receive OnChain payments from other channels (eg, from a payment or a
     Boost), you will need to let us know which address to direct these tokens
     to.
   </p>
