--- a/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/balance/balance-cash.component.html
@@ -35,9 +35,9 @@
       >
         Pending Balance<m-tooltip icon="help"
           >The total amount of cash you are scheduled to receive from
-          wires<ng-container *ngIf="isPro"> and/or Pro earnings</ng-container>.
-          The payout date is an estimation and it may take up to 7 days before
-          your cash reaches your bank account.
+          payments<ng-container *ngIf="isPro"> and/or Pro earnings</ng-container
+          >. The payout date is an estimation and it may take up to 7 days
+          before your cash reaches your bank account.
         </m-tooltip>
       </div>
       <div class="m-walletBalance--cash__colValWrapper" *ngIf="!hasAccount">
